--- a/css/home.css
+++ b/css/home.css
@@ -1,1 +1,292 @@
-@import url(globals.css);
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@600&display=swap');
+@import url('http://fonts.cdnfonts.com/css/beon');
+
+:root{
+	--pry-clr: 249, 11%, 12%;
+	--pry-clr-preview: #1c1b22;
+	--sry-clr: 332 41% 38%;
+	--sry-clr-preview: #a03869;
+    --s-sry-clr: #ee0572;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #00000000;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #88888842;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+body{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #1c1b22;
+    color: aliceblue;
+    user-select: none;
+}
+h1{
+    font-weight: 400;
+    font-size: xx-large;
+    padding: 2rem;
+    border-radius: .5rem;
+    background-color: #f0f8ff60;
+}
+#landing{
+    background-image: url(../img/ista\ ntic\ safi\ img.JPG);    
+    height: 100vh;
+    width: 99vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+header{
+    background-color: #ffffff00;
+    display: flex;
+    justify-content: flex-start;
+    padding: 0 2rem;
+    position: fixed;
+    inset: .4rem .3rem auto .4rem;
+    border-radius: 1rem;
+    z-index: 1;
+}
+header img{
+    padding: 1rem;
+    float: left;
+    width: 2rem;
+}
+header nav{
+    margin-left: 2rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+header nav a{
+    text-decoration: none;
+    color: aliceblue;
+    padding: 1rem 2rem;
+    border-radius: .6rem;
+    transition: color .2s ease-out;
+}
+#nav-mobile{
+    display: none;
+}
+header nav a:hover{
+    color: var(--s-sry-clr);
+    transition: color .2s ease-in;
+}
+#landingTitle{
+    position: absolute;
+    height: 100vh;
+    width: 99vw;
+    filter: hue-rotate(-20deg) blur(10px);
+}
+h1 sup{
+    font-size: medium;
+}
+.beon-f{
+	font-family: 'Beon', sans-serif;
+	color: hsl(var(--sry-clr)/.6);
+	text-decoration: none;
+    font-weight: 500;
+    text-shadow: 0 0 .5em hsl(var(--sry-clr));
+    color: hsl(var(--pry-clr));
+    animation: glow 2s infinite;
+}
+footer{
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #f0f8ff09;
+    margin-top: 5rem;
+    background-image: url();
+}
+footer span{
+    color: #f0f8ff7d;
+}
+footer span:not(footer span:last-child){
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+}
+footer span:nth-child(2) a{
+    margin: .5rem;
+}
+.fa-brands{
+    color: #a03869;
+    font-size: 2rem;
+    transition: color .2s ease-out;
+}
+.fa-brands:hover{
+    transition: color .2s ease-in;
+    color: #a03868ac;
+}
+.cards-container{
+    margin: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.card{
+    cursor: pointer;
+    background-color: #f0f8ff09;
+    display: flex;
+    flex: 1 0 21%;
+    padding: 2rem;
+    border-radius: none;
+    border: .05rem solid #f0f8ff30;
+}
+.card h2{
+    padding: 1rem;
+    border-right: .3rem solid #a03869;
+    border-radius: .5rem;
+    margin-right: 1.5rem;
+}
+.card:last-child{
+    border-left: none;
+    border-top-right-radius: .5rem;
+    border-bottom-right-radius: .5rem;
+}
+.card:first-child{
+    border-right: none;
+    border-top-left-radius: .5rem;
+    border-bottom-left-radius: .5rem;
+}
+@keyframes glow{
+    0%{
+        color: hsl(var(--sry-clr) / .4);
+        transition: ease-out;
+        text-shadow: none;
+    }
+    50%{
+        color: hsl(var(--sry-clr));
+        text-shadow: 0 0 .5em var(--s-sry-clr);
+        transition: ease-in;
+    }
+    100%{
+        color: hsl(var(--sry-clr)/.4);
+        transition: ease-out;
+        text-shadow: none;
+    }
+}
+#nav-mobile>a{
+    display: none;
+}
+#hideNav,#showNav{
+    display: none;
+}
+#showNav, #hideNav{
+    border: none;
+    background-color: transparent;
+    color: aliceblue;
+    padding: 1rem;
+}
+#showNav:hover, #hideNav:hover{
+    background-color: #ffffff70;
+}
+header.mobile-nav-collapsed{
+    inset: '.4rem .3rem auto .4rem';
+}
+header.mobile-nav-shown{
+    inset: '.4rem .3rem .4rem .4rem';
+}
+a[href='#anchor']{
+    display: none;
+    position: fixed;
+    inset: auto 1.5rem 1.5rem auto ;
+    background-color: #ee0572;
+    padding: 1.1rem 1.2rem;
+    font-size:x-large ;
+    color: aliceblue;
+    border-radius: .2rem;
+    animation: fadein .3s ease-in;
+}
+@keyframes fadein{
+    from{
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    to{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+.sectionTitle{
+    padding: 1rem;
+    margin-inline: 3rem;
+}
+@media only screen and (max-width: 768px) {
+    h1{
+        font-size: large;
+    }
+    header{
+        background-color: #1c1b2254;
+    }
+    #showNav{
+        display: inline;
+    }
+    #nav-desktop {
+        display: none;
+    }
+    #nav-mobile{
+        display: flex;
+        flex-direction: column;
+    }
+    #nav-mobile a{
+        display: inline;
+    }
+    .cards-container{
+        flex-direction: column;
+        margin-inline: 1rem;
+    }
+    .card{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        -webkit-border-radius: 0;
+        border-radius: 0;
+    }
+    .card h2{
+        margin: 0;
+        margin-bottom: 1.5rem;
+        border: none;
+        border-bottom: .3rem solid #a03869;
+    }
+    .card:first-child{
+        -webkit-border-radius: 0;
+        border-radius: 0;
+        border-top-right-radius: .5rem;
+        border-top-left-radius: .5rem;
+        border-bottom-right-radius: 0;
+        border-bottom: none;
+        border-right: .05rem solid #f0f8ff30;
+    }
+    .card:last-child{
+        -webkit-border-radius: 0;
+        border-radius: 0;
+        border-bottom-right-radius: .5rem;
+        border-bottom-left-radius: .5rem;
+        border-top-right-radius: 0;
+        border-top: none;
+        border-left: .05rem solid #f0f8ff30;
+    }
+}
